fixed spacing and button issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -90,7 +90,8 @@ code {
 
 #profileView {
   margin:0;
-  height: 575px;
+  /* height: 1000px; */
+  height: 100vh;
   background-size: cover;
   padding-top: 30px;
   padding-bottom: 30px;
